After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703202 - Clutter master does not compile with Wayland backend
Clutter master does not compile with Wayland backend
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-06-27 15:58 UTC by Rob Bradford
Modified: 2013-06-28 10:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
macros: Add missing CLUTTER_AVAILABLE_IN_* entries imported from 1.16 (4.10 KB, patch)
2013-06-27 15:58 UTC, Rob Bradford
rejected Details | Review
wayland: Remove now removed CLUTTER_AVAILABLE_ API annotations (1.11 KB, patch)
2013-06-27 16:49 UTC, Rob Bradford
committed Details | Review

Description Rob Bradford 2013-06-27 15:58:39 UTC
Some of the API in the Wayland backend uses CLUTTER_AVAILABLE_IN_1_10 which was
missing from the list of macros.
Comment 1 Rob Bradford 2013-06-27 15:58:41 UTC
Created attachment 247922 [details] [review]
macros: Add missing CLUTTER_AVAILABLE_IN_* entries imported from 1.16
Comment 2 Emmanuele Bassi (:ebassi) 2013-06-27 16:02:04 UTC
Review of attachment 247922 [details] [review]:

no, that's broken.

the macros were removed because the API was broken.

you should remove the annotations in master; at some point, everything will be marked as CLUTTER_AVAILABLE_IN_2_0.
Comment 3 Rob Bradford 2013-06-27 16:44:04 UTC
Ah - okey dokey. Sorry for the noise.
Comment 4 Rob Bradford 2013-06-27 16:49:54 UTC
Created attachment 247926 [details] [review]
wayland: Remove now removed CLUTTER_AVAILABLE_ API annotations

In 00bee5f the API annotations were removed as the API is refreshed from
the start. This change removes the annotations from the Wayland API.
Comment 5 Emmanuele Bassi (:ebassi) 2013-06-27 16:59:46 UTC
Review of attachment 247926 [details] [review]:

looks good.
Comment 6 Rob Bradford 2013-06-28 10:39:10 UTC
Attachment 247926 [details] pushed as c3be92a - wayland: Remove now removed CLUTTER_AVAILABLE_ API annotations