wayland: Remove now removed CLUTTER_AVAILABLE_ API annotations

In 00bee5f the API annotations were removed as the API is refreshed from
the start. This change removes the annotations from the Wayland API.

https://bugzilla.gnome.org/show_bug.cgi?id=703202